Framework's lines edition: fix updating cells color
Restore red marking when an absence is not validated
Initialize the widget calendar with the asked date when using the week view
Fix display of html entities on information and absence information messages
Fix HTML entities in floors and groups dropdown menus (position's form)
Remove spaces from some read-only values in working hours table.

- Enhancements
Do not display hidden config elements

-Plumbing
Add missing FixtureBuilder class for units tests
Add Agent's Fixture
Delete agents in units test to avoid duplicate
Working hours: add a dedicated method for permissions checking
Add unit tests for working hours permissions

*** Version 21.04.03       (2021-10-08)   ***
- Enhancements

-Fixes
Remove BibLibre address from Mail-From's setting
ICS: Prevent deleting non-imported absences
Lines with cells specifically disabled are never considered as empty
Stop returning errors when importing ICS events
Return access denied when editing unknown absence id
Make ICS parser gets the right EXDATE when the TimeZone contains (MT 34284)

-Plumbing
Use session flash bag for notice and error messages in framework delete and restore

*** Version 21.04.02       (2021-07-02)   ***
-Fixes
Check the rights with agent's site instead of all sites
Always keep logged in agent in holiday's agents list
show holiday's agents list according only to getManagedAgents function
Apply right checking on mono-site mode
Fix import of models
Planning: notifiy deleted agents
Don't sanitize skills data in position index page
When checking Deleted agents, update agents dropdown in holidays index
Fix day models import

- Enhancements
Show refused reason for refused level 1compensatory time
Prevent user to change its own password via /myaccount with demo mode enabled
Remove autocomplete on datepicker elements

*** Version 21.04.01       (2021-05-28)   ***
-Fixes
Installer load an up-to-date SQL file + disable web_profiler